--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,42 @@ a {
 * {
   box-sizing: border-box;
 }
+
+#three-js-canvas {
+  padding: 0.3em;
+}
+
+canvas {
+  width: 100vw;
+  height: 80vh;
+  display: block;
+}
+
+.fullscreen {
+  /* position: absolute; */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 1s;
+}
+
+.bg {
+  background: #101010;
+}
+
+.fullscreen.notready {
+  color: #606060;
+}
+
+.fullscreen.ready > div {
+  cursor: pointer;
+}
+
+.fullscreen.clicked {
+  pointer-events: none;
+  opacity: 0;
+}
