--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,26 +14,54 @@ a {
 * {
   box-sizing: border-box;
 }
+/* .container {
+  width: 100%;
+  height: 500px;
+  display: table;
+  border: 1px solid red;
+  text-align: center;}
+
+.center {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.content {
+  display: inline-block;
+  text-align: center;
+  border: 1px solid green;
+} */
 
 #three-js-canvas {
-  padding: 0.3em;
+  /* padding: 0.03em; */
+  width: 100vw;
+  height: 100vh;
+  /* position: fixed; */
+  z-index: -1;
+  text-align: center;
 }
 
 canvas {
+  position: fixed;
+  z-index: -1;
   width: 100vw;
-  height: 80vh;
+  height: 100vh;
   display: block;
+  /* left: 0;
+  top: 0; */
 }
 
 .fullscreen {
-  /* position: absolute; */
+  /* position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: flex; */
+  display: table-cell;
+  vertical-align: middle;
+  /* justify-content: center;
+  align-items: center; */
   transition: all 1s;
 }
 
