fix padding bug in about, fix project card width adjust🔨

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,7 @@
 html,
 body {
+  min-height: 100vh;
+  min-width: 100vw;
   padding: 0;
   margin: 0;
   font-family: -apple-system, Didot, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
@@ -14,24 +16,6 @@ a {
 * {
   box-sizing: border-box;
 }
-/* .container {
-  width: 100%;
-  height: 500px;
-  display: table;
-  border: 1px solid red;
-  text-align: center;}
-
-.center {
-  display: table-cell;
-  vertical-align: middle;
-}
-
-.content {
-  display: inline-block;
-  text-align: center;
-  border: 1px solid green;
-} */
-
 #three-js-canvas {
   /* padding: 0.03em; */
   width: 100vw;
@@ -52,16 +36,8 @@ canvas {
 }
 
 .fullscreen {
-  /* position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex; */
   display: table-cell;
   vertical-align: middle;
-  /* justify-content: center;
-  align-items: center; */
   transition: all 1s;
 }
 
