--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,8 @@ body {
   min-width: 100vw;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, Didot, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* font-family: -apple-system, Didot, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
 }
 
 a {
